redesignin of the app

--- a/index.html
+++ b/index.html
@@ -10,21 +10,17 @@
   <body>
     <section>
       <div class="input-section">
-        <span id="Armans-to-do">Arman's To-Do</span>
-        <div class="input-field">
-          <label for="task">Enter your task</label>
-          <input type="text" name="task" id="task-input" />
-          <button class="add-task">A D D</button>
+        <div class="task-submission">
+          <span id="Armans-to-do">Arman's To-Do</span>
+          <div class="input-field">
+            <input type="text" name="task" id="task-input" />
+            <button class="add-task">ADD</button>
+          </div>
         </div>
+
         <div class="task-list">
           <ul class="tasks"></ul>
         </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="task-list">
-        <ul class="tasks"></ul>
       </div>
     </section>
   </body>
